# conan-cmake-library-template

./: .cmake-format.py  .gitignore  CMakeLists.txt  LICENSE  ProjectInstallation.cmake  ProjectOptions.cmake  ProjectVariables.cmake  README.md  conanfile.py
cmake/: ClangFormat.cmake  CompilerWarnings.cmake  Dependencies.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake
configure_files/: Config.cmake.in  config.hpp.in
include/myproject/: interface.hpp  log.hpp
src/: lib.cpp  log.cpp
test_package/: CMakeLists.txt  CMakeUserPresets.json  conanfile.py
test_package/src/: pkg_test.cpp
tests/: CMakeLists.txt  tests.cpp
